; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngimage.c_buffer_destroy.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngimage.c_buffer_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.buffer_list* }
%struct.buffer_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.buffer*)* @buffer_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buffer_destroy(%struct.buffer* %0) #0 {
  %2 = alloca %struct.buffer*, align 8
  %3 = alloca %struct.buffer_list*, align 8
  store %struct.buffer* %0, %struct.buffer** %2, align 8
  %4 = load %struct.buffer*, %struct.buffer** %2, align 8
  %5 = getelementptr inbounds %struct.buffer, %struct.buffer* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.buffer_list*, %struct.buffer_list** %6, align 8
  store %struct.buffer_list* %7, %struct.buffer_list** %3, align 8
  %8 = load %struct.buffer*, %struct.buffer** %2, align 8
  %9 = call i32 @buffer_init(%struct.buffer* %8)
  %10 = load %struct.buffer_list*, %struct.buffer_list** %3, align 8
  %11 = call i32 @buffer_destroy_list(%struct.buffer_list* %10)
  ret void
}

declare dso_local i32 @buffer_init(%struct.buffer*) #1

declare dso_local i32 @buffer_destroy_list(%struct.buffer_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
